read gradle installation from env variables